# fatal-randomizer

./: .gitignore  LICENSE  README.md  character_generator.py  dice.py  pretty_print.py  pyproject.toml
abilities/: generate_abilities.py
body/: body_tables.py  generate_body.py
disposition/: disposition_tables.py  generate_disposition.py
equipment/: armors.py  generate_equipment.py  spells.py
models/: character_models.py
race/: generate_race.py  race_tables.py
society/: generate_society.py  names.py  skill_tables.py
tables/: _generate_weapons.py  abilities.py  ability_tables.py  armors.py  body.py  body_tables.py  convert_occupation_requirements.py  disposition.py  disposition_tables.py  equipment.py  gender_tables.py  ingredients.py  item_tables.py  names.py  occupation_tables.py  race_tables.py  race_traits.py  skill_tables.py  society.py  society_tables.py  spells.py  weapons.py
